--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "astro": "^5.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-katex": "7.0.1",
+    "rehype-raw": "7.0.0",
+    "rehype-stringify": "10.0.1",
+    "remark-directive": "3.0.1",
+    "remark-gfm": "4.0.0",
+    "remark-math": "6.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
