--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.1.8",
+    "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-katex": "7.0.1",
